# bobopt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bobopt.sln  bobopt.vcxproj  bobopt.vcxproj.filters  bobopt_config.cpp  bobopt_config.hpp  bobopt_config.inl  bobopt_debug.hpp  bobopt_diagnostic.cpp  bobopt_diagnostic.hpp  bobopt_diagnostic.inl  bobopt_inline.hpp  bobopt_language.hpp  bobopt_macros.hpp  bobopt_method.cpp  bobopt_method.hpp  bobopt_method.inl  bobopt_method_factory.cpp  bobopt_method_factory.hpp  bobopt_optimizer.cpp  bobopt_optimizer.hpp  bobopt_optimizer.inl  bobopt_parser.hpp  bobopt_text_utils.cpp  bobopt_text_utils.hpp  bobopt_text_utils.inl  bobopt_utils.hpp  main.cpp  mainpage.hpp
benchmarks/: CMakeLists.txt  bench_utils.cpp  bench_utils.hpp  bobox_epilog.hpp  bobox_prolog.hpp  gen_compile_commands.cmake
benchmarks/prefetch/: attach.cfg  bench_prefetch.cpp  bench_prefetch.hpp  main.cpp
benchmarks/yield/: bench_yield.hpp  main.cpp
clang/: bobopt_clang_epilog.hpp  bobopt_clang_prolog.hpp  bobopt_clang_utils.cpp  bobopt_clang_utils.hpp  bobopt_clang_utils.inl  bobopt_control_flow_search.hpp
doc/: bibliography.tex  cd_config.mp  cd_core.mp  cd_wrap.mp  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  epilog.tex  preface.tex  thesis.tex
make/: cmake-gen-make-clang.sh  cmake-gen-make-gcc.sh  cmake-gen-vs2012-win32.bat  cmake-gen-vs2012-x64.bat  cmake-gen-vs2013-win32.bat  cmake-gen-vs2013-x64.bat  cmake-gen.bat  cmake-gen.sh  default.cmake  no-benchmarks.cmake  no-folders.cmake
make/modules/: FindBobox.cmake  FindClang.cmake
methods/: bobopt_complexity_tree.cpp  bobopt_complexity_tree.hpp  bobopt_complexity_tree.inl  bobopt_prefetch.cpp  bobopt_prefetch.hpp  bobopt_yield_complex.cpp  bobopt_yield_complex.hpp
